stylesheets/screen.css
/* ... */
dd {
  margin: 0 0 0 40px;
}

nav ul, nav ol {
  list-style: none;
  list-style-image: none;
  margin: 0;
  padding: 0;
}

/* =============================================================================
 * Embedded content
 * ========================================================================== */
/* 1. Improve image quality when scaled in IE7: h5bp.com/d
 * 2. Remove the gap between images and borders on image containers: h5bp.com/i/440 */
img {
  border: 0;
  vertical-align: middle;
  -ms-interpolation-mode: bicubic;
}

/* Correct overflow not hidden in IE9 */
svg:not(:root) {
  overflow: hidden;
}

/* =============================================================================
 * Figures
 * ========================================================================== */
figure, form {
  margin: 0;
}

/* =============================================================================
 * Forms
 * ========================================================================== */
fieldset {
  border: 0;
  margin: 0;
  padding: 0;
}

/* Indicate that 'label' will shift focus to the associated form element */
label {
  cursor: pointer;
}

/* 1. Correct color not inheriting in IE6/7/8/9
 * 2. Correct alignment displayed oddly in IE6/7 */
legend {
  border: 0;
  padding: 0;
  white-space: normal;
  *margin-left: -7px;
}

/* 1. Correct font-size not inheriting in all browsers
 * 2. Remove margins in FF3/4 S5 Chrome
 * 3. Define consistent vertical alignment display in all browsers */
button, input, select, textarea {
  font-size: 100%;
  margin: 0;
  vertical-align: baseline;
  *vertical-align: middle;
}

/* 1. Define line-height as normal to match FF3/4 (set using !important in the UA stylesheet) */
button, input {
  line-height: normal;
}

/* 1. Display hand cursor for clickable form elements
 * 2. Allow styling of clickable form elements in iOS
 * 3. Correct inner spacing displayed oddly in IE7 (doesn't effect IE6) */
button {
  cursor: pointer;
  -webkit-appearance: button;
  *overflow: visible;
}

input[type="button"], input[type="reset"], input[type="submit"] {
  cursor: pointer;
  -webkit-appearance: button;
  *overflow: visible;
}

/* Re-set default cursor for disabled elements */
button[disabled] {
  cursor: default;
}

input[disabled] {
  cursor: default;
}
input[type="checkbox"], input[type="radio"] {
  box-sizing: border-box;
  padding: 0;
  *width: 13px;
  *height: 13px;
}
input[type="search"] {
  -webkit-appearance: textfield;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}
input[type="search"]::-webkit-search-decoration, input[type="search"]::-webkit-search-cancel-button {
  -webkit-appearance: none;
}

/* Consistent box sizing and appearance */
/* Remove inner padding and border in FF3/4: h5bp.com/l */
button::-moz-focus-inner, input::-moz-focus-inner {
  border: 0;
  padding: 0;
}

/* 1. Remove default vertical scrollbar in IE6/7/8/9
 * 2. Allow only vertical resizing */
textarea {
  overflow: auto;
  vertical-align: top;
  resize: vertical;
}

/* =============================================================================
 * Tables
 * ========================================================================== */
table {
  border-collapse: collapse;
  border-spacing: 0;
}

td {
  vertical-align: top;
}

/* ==|== primary styles =====================================================
 * Author:
 * ========================================================================== */
/* ==|== media queries ======================================================
 * EXAMPLE Media Query for Responsive Design.
 * This example overrides the primary ('mobile first') styles
 * Modify as content requires.
 * ========================================================================== */
@media only screen and (min-width: 35em) {
  /* Style adjustments for viewports that meet the condition */
}
/* ==|== non-semantic helper classes ========================================
 * Please define your styles before this section.
 * ========================================================================== */
/* Image replacement */
.ir {
  border: 0;
  font: 0/0 a;
  text-shadow: none;
  color: transparent;
  background-color: transparent;
}

/* Hide from both screenreaders and browsers: h5bp.com/u */
.hidden {
  display: none !important;
  visibility: hidden;
}

/* Hide only visually, but have it available for screenreaders: h5bp.com/v */
.visuallyhidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}
.visuallyhidden.focusable:active, .visuallyhidden.focusable:focus {
  clip: auto;
  height: auto;
  margin: 0;
  overflow: visible;
  position: static;
  width: auto;
}

/* Extends the .visuallyhidden class to allow the element to be focusable
 * when navigated to via the keyboard: h5bp.com/p */
/* Hide visually and from screenreaders, but maintain layout */
.invisible {
  visibility: hidden;
}

/* Contain floats: h5bp.com/q */
.clearfix {
  *zoom: 1;
}
.clearfix:before {
  content: "";
  display: table;
}
.clearfix:after {
  content: "";
  display: table;
  clear: both;
}
/* ... */

